--- a/index.css
+++ b/index.css
@@ -8,7 +8,6 @@ body {
   background-image: url(img/dog-cat.jpg);
   background-size: cover;
   color: white;
-  min-height: 100%;
 }
 
 h1 {
@@ -17,10 +16,10 @@ h1 {
 }
 
 form {
-  background-color: rgba(0, 0, 0, .8);
+  background-color: rgba(0, 0, 0, 0.8);
   border-radius: 1rem;
   width: 90%;
-  margin: 15px auto 0;
+  margin: 30px auto 0;
   max-width: 500px;
   padding: 20px;
   color: rgb(238, 231, 231);
@@ -40,7 +39,8 @@ textarea {
   border-radius: 3px;
   border: 3px solid gray;
   outline: none;
-  font-family: cursive;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.25rem;
 }
 
@@ -49,8 +49,8 @@ p {
   font-weight: 500;
 }
 
-h3 {
-  margin: 20px 0 3px;
+h1 {
+  margin: 30px 0 3px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1.25rem;
 }
