--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ body {
   background-image: url(img/dog-cat.jpg);
   background-size: cover;
   color: white;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -20,7 +21,7 @@ form {
   border-radius: 1rem;
   width: 90%;
   margin: 30px auto 0;
-  max-width: 500px;
+  max-width: 550px;
   padding: 20px;
   color: rgb(238, 231, 231);
 }
@@ -49,7 +50,7 @@ p {
   font-weight: 500;
 }
 
-h1 {
+.container h1 {
   margin: 30px 0 3px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1.25rem;
@@ -107,6 +108,10 @@ button:hover {
   border-radius: 1rem;
   background-color: white;
   color: black;
+}
+
+.pet-adopt{
+  margin-top: 20px;
 }
 
 @media (min-width: 60em) {
