--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ form {
   border-radius: 1rem;
   width: 90%;
   margin: 30px auto 0;
-  max-width: 550px;
+  max-width: 500px;
   padding: 20px;
   color: rgb(238, 231, 231);
 }
@@ -50,7 +50,7 @@ p {
   font-weight: 500;
 }
 
-.container h1 {
+h1.h1 {
   margin: 30px 0 3px;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 1.25rem;
@@ -111,7 +111,7 @@ button:hover {
 }
 
 .pet-adopt{
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 @media (min-width: 60em) {
