--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
   background-size: cover;
   color: white;
   background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
 h1 {
@@ -38,10 +39,10 @@ textarea {
   background-color: transparent;
   color: white;
   border-radius: 3px;
-  border: 3px solid gray;
+  border: 1px solid gray;
+  box-shadow: inset 0 0 3px  rgb(194, 193, 193);
   outline: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.25rem;
 }
 
@@ -79,7 +80,7 @@ input:focus {
   outline-offset: 2px;
 }
 
-section p {
+.pet-adopt p {
   margin-top: 10px;
   font-weight: 500;
   font-size: 1.2rem;
@@ -106,13 +107,9 @@ textarea {
 
 button:hover {
   border-radius: 1rem;
-  background-color: white;
-  color: black;
+  color: red;
 }
 
-.pet-adopt{
-  margin-top: 10px;
-}
 
 @media (min-width: 60em) {
   form {
