--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ form {
 }
 
 option {
-  color: gray;
+  color: black;
 }
 
 select,
@@ -40,7 +40,7 @@ textarea {
   color: white;
   border-radius: 3px;
   border: 1px solid gray;
-  box-shadow: inset 0 0 3px  rgb(194, 193, 193);
+  box-shadow: inset 0 0 3px rgb(194, 193, 193);
   outline: none;
   font-family: system-ui, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 1.25rem;
@@ -110,9 +110,9 @@ button:hover {
   color: red;
 }
 
-
 @media (min-width: 60em) {
   form {
     transform: translateX(50%);
+   
   }
 }
